# GNEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  GEMINI.md  GemLog.txt  Physics 계획서  README.md  engine struct.md  보고서  코드 규칙.md
app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
app/scene/: CMakeLists.txt  MainMenuScene.cpp  MainMenuScene.h  TestScene.cpp  TestScene.h  logoScene.cpp  logoScene.h
example/T.C.S/: Application.cpp  CMakeLists.txt  main.cpp
example/T.C.S/prefab/: PlayerPrefab.h
example/T.C.S/scene/: CMakeLists.txt  InGame.cpp  InGame.h  MainMenuScene.h  logoScene.cpp  logoScene.h
example/app/: Application.cpp  Application.h  CMakeLists.txt  main.cpp
example/app/prefab/: PlayerPrefab.h
example/app/scene/: TestScene.cpp  TestScene.h  logoScene.h
include/GNEngine/: CMakeLists.txt  GNEngineRootPath.h.in  GNEngine_API.h  GNManager.h  Managers.h
include/GNEngine/component/: AccelerationComponent.h  AnimationComponent.h  CMakeLists.txt  CameraComponent.h  EventListenerComponent.h  FadeComponent.h  InputControlComponent.h  PlayerAnimationControllerComponent.h  PlayerMovementComponent.h  RenderComponent.h  SoundComponent.h  TextComponent.h  TransformComponent.h  VelocityComponent.h
include/GNEngine/core/: Animation.h  Component.h  ComponentArray.h  Entity.h  EventInterface.h  RenderLayer.h  Scene.h  Sound.h  Text.h  Texture.h
include/GNEngine/flatbuffers_generated/: definitions_generated.h
include/GNEngine/manager/: AnimationManager.h  EntityManager.h  EventManager.h  FadeManager.h  FileManager.h  InputManager.h  RenderManager.h  SceneManager.h  SoundManager.h  SystemManager.h  TextManager.h  TextureManager.h
include/GNEngine/prefab/: PlayerPrefab.h
include/GNEngine/resource/: Animation.h  Sound.h  Texture.h
include/GNEngine/system/: AccelerationResetSystem.h  AnimationSystem.h  CameraSystem.h  FadeSystem.h  InputSystem.h  InputToAccelerationSystem.h  MovementSystem.h  PlayerAnimationControlSystem.h  RenderSystem.h  SoundSystem.h  TextSystem.h
include/engine/: Animation.h  AnimationManager.cpp  AnimationManager.h  AnimationManager.hpp  Application.cpp  Application.h  CMakeLists.txt  EventInterface.h  EventListnerComponent.h  EventManager.cpp  EventManager.h  InputManager.cpp  InputManager.h  MainMenuScene.h  Managers.h  Scene.h  SceneManager.h  TextManager.h  Texture.cpp  Texture.h  Texture.hpp  TextureManager.cpp  TextureManager.h  TextureManager.hpp  structure.md
include/engine/_legacy/: BlankObject.cpp  BlankObject.h  CMakeLists.txt  TestObject.cpp  TestObject.h  TextObject.cpp  TextObject.h
include/engine/component/: AccelerationComponent.h  AnimationComponent.cpp  AnimationComponent.h  CMakeLists.txt  CameraComponent.h  Component copy.h  EventListenerComponent.h  FadeComponent.h  InputControlComponent.h  PlayerAnimationControllerComponent.h  PlayerMovementComponent.cpp  PlayerMovementComponent.h  RenderComponent.cpp  RenderComponent.h  SoundComponent.cpp  SoundComponent.h  TextComponent.cpp  TextComponent.h  TransformComponent.h  VelocityComponent.h
include/engine/core/: Component.h  ComponentArray.h  Entity.h  EventInterface.h  Scene.h  SystemInterface.h
include/engine/ecs/: CMakeLists.txt  Entity.h  EntityManager.cpp  EntityManager.h
include/engine/event/: CMakeLists.txt  EventInterface.h  EventListnerComponent.h  EventManager.h  InputManager.cpp  InputManager.h  RenderManager.cpp  RenderManager.h
include/engine/flatbuffers_generated/: definitions_generated.h
include/engine/manager/: AnimationManager.cpp  AnimationManager.h  CMakeLists.txt  EntityManager.h  EventManager.h  FadeManager.h  FileManager.h  InputManager.h  RenderManager.cpp  RenderManager.h  SceneManager.cpp  SceneManager.h  SoundManager.cpp  SoundManager.h  SystemManager.h  TextManager.cpp  TextManager.h  TextureManager.cpp  TextureManager.h
include/engine/object/: BlankObject.cpp  BlankObject.h  CMakeLists.txt  Object.h  TestObject.cpp  TestObject.h  TextObject.cpp  TextObject.h
include/engine/prefab/: CmakeLists.txt  PlayerPrefab.cpp  PlayerPrefab.h
include/engine/resource/: Animation.cpp  Animation.h  AnimationManager.h  CMakeLists.txt  Text.cpp  Text.h  TextManager.cpp  Texture.h  TextureManager.cpp  TextureManager.h
include/engine/scene/: CMakeLists.txt  MainMenuScene.h  Scene.h  SceneManager.h
include/engine/system/: AccelerationResetSystem.h  AnimationSystem.cpp  AnimationSystem.h  CameraSystem.cpp  CameraSystem.h  FadeSystem.h  InputSystem.cpp  InputSystem.h  InputToAccelerationSystem.cpp  InputToAccelerationSystem.h  MovementSystem.cpp  MovementSystem.h  PlayerAnimationControlSystem.cpp  PlayerAnimationControlSystem.h  RenderSystem.cpp  RenderSystem.h  SoundSystem.cpp  SoundSystem.h
src/: Application.cpp  Application.h  CMakeLists.txt  MainCallback.cpp  MainCallback.h  MainMenuScene.hpp  SceneManager.hpp  TestSound.cpp  TextManager.cpp  TextManager.hpp  TextureObj.cpp  TextureObj.hpp  draw_vector_image.cpp  main.cpp  template.cpp  test.cpp  using_Animation.cpp  using_myheader_texture.cpp  using_texture.cpp  using_ttf.cpp
src/GNEngine/: GNManager.cpp
src/GNEngine/component/: AnimationComponent.cpp  SoundComponent.cpp
src/GNEngine/core/: Animation.cpp  ComponentArray.cpp  Sound.cpp  Text.cpp
src/GNEngine/manager/: AnimationManager.cpp  EntityManager.cpp  FadeManager.cpp  FileManager.cpp  InputManager.cpp  RenderManager.cpp  SceneManager.cpp  SoundManager.cpp  SystemManager.cpp  TextManager.cpp  TextureManager.cpp
src/GNEngine/resource/: Sound.cpp
src/GNEngine/system/: AccelerationResetSystem.cpp  AnimationSystem.cpp  CMakeLists.txt  CameraSystem.cpp  FadeSystem.cpp  InputSystem.cpp  InputToAccelerationSystem.cpp  MovementSystem.cpp  PlayerAnimationControlSystem.cpp  RenderSystem.cpp  SoundSystem.cpp  TextSystem.cpp
src/engine/component/: AnimationComponent.cpp  PlayerMovementComponent.cpp  RenderComponent.cpp  SoundComponent.cpp  TextComponent.cpp
src/engine/core/: ComponentArray.cpp
src/engine/resource/: Sound.cpp  (+2 more)
src/scene/: CMakeLists.txt  MainMenuScene.cpp  MainMenuScene.h  Scene.h  TestScene.cpp  TestScene.h
(+101 files in other folders)
